change the grid item's min-width to 200px This fixes some weird wrapping on larger screens.

--- a/styles/main.css
+++ b/styles/main.css
@@ -162,7 +162,7 @@ button {
 }
 #roundInputsContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(192px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 1rem;
 }
 #roundInputsContainer h3 {
